--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "geist": "^1.3.0",
     "lucide-react": "^0.378.0",
     "next": "^14.2.1",
+    "next-themes": "^0.3.0",
     "postgres": "^3.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.2.1",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.3"
